# crossword-generator

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml
sample_input_de/: layout_15_15_empty.csv  layout_5_12_empty.csv  layout_5_12_prefilled.csv  sample_words.csv
sample_input_en/: layout_15_15_empty.csv  layout_5_12_empty.csv
src/crossword_generator/: __init__.py  __main__.py  common.py  config.py  layout_handler.py  optimizer.py  state.py  tree_search.py  word_handler.py
src/crossword_generator/sample_input/: layout_12_5_udacity_filled.csv  layout_5_5.csv  words_udacity.csv
tests/: test_layout_handler.py  test_optimizer.py
