[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crossword-generator"
version = "0.1.0"
description = "Generate crosswords using Monte Carlo Tree Search (MCTS)"
readme = "README.md"
authors = [{ name = "Jonas Schumacher", email = "jonas.schumacher@tu-dortmund.de" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["crossword", "generator", "creator", "mcts", "monte carlo tree search"]
dependencies = ["nltk>=3.5", "pandas>=1.4.0", "numpy>=1.22.0", "tqdm>=4.41.0"]
requires-python = ">=3.8"

[project.optional-dependencies]
build = ["build", "twine"]
dev   = ["black", "pytest"]

[project.scripts]
crossword = "crossword_generator.__main__:main"

[project.urls]
repository    = "https://github.com/jonas-schumacher/crossword-generator"
blogpost = "https://schumacher.pythonanywhere.com/udacity/crossword"
